force-app/main/default/objects/UIT_Import_Event__e/UIT_Import_Event__e.object-meta.xml
<CustomObject>
    <description>Represents data about successfully Imported, imported records and amount of errors</description>
    <label>UIT Import Event</label>
    <pluralLabel>UIT Import Events</pluralLabel>
</CustomObject>