force-app/main/default/objects/UIT_Import_Event__e/fields/importedRecords__c.field-meta.xml
<CustomField>
    <fullName>importedRecords__c</fullName>
    <defaultValue>0</defaultValue>
    <label>importedRecords</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>