force-app/main/default/objects/UIT_Import_Event__e/fields/importStatus__c.field-meta.xml
<CustomField>
    <fullName>importStatus__c</fullName>
    <defaultValue>&apos;Error&apos;</defaultValue>
    <label>importStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>